force-app/main/default/objects/BatchLog__c/BatchLog__c.object-meta.xml
<CustomObject>
    <label>バッチログ</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>バッチログ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>