force-app/main/default/objects/BatchLog__c/fields/BatchName__c.field-meta.xml
<CustomField>
    <fullName>BatchName__c</fullName>
    <label>バッチ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>