force-app/main/default/objects/BatchLog__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>種類</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>