force-app/main/default/objects/BatchLog__c/listViews/AllData.listView-meta.xml
<ListView>
    <fullName>AllData</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>BatchName__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>全てのデータ</label>
</ListView>