force-app/main/default/objects/BatchLog__c/listViews/TodaysData.listView-meta.xml
<ListView>
    <fullName>TodaysData</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>BatchName__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>今日のデータ</label>
</ListView>